--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Lauana\\8583Iso\\": "src/"
+            "Lauana\\Iso\\": "src/"
         }
     },
     "autoload-dev": {
@@ -17,7 +17,8 @@
         }
     },
     "require": {
-        "php": "^7.4 | ^8.0"
+        "php": "^7.4 | ^8.0",
+        "symfony/options-resolver": "^5.4"
     },
     "require-dev": {
         "symfony/var-dumper": "^5.4",
