--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
     },
     "scripts": {
         "test": "vendor/bin/phpunit --verbose --testdox",
-        "test-ci" : "vendor/bin/phpunit --verbose --testdox --log-junit ./test-reports/junit.xml",
+        "test-ci" : "vendor/bin/phpunit --verbose --testdox --coverage-clover phpunit.coverage.xml",
         "phpcs" : "vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.php",
         "phpcs-validate" : "vendor/bin/php-cs-fixer fix --dry-run --diff"
     }
