chore: add composer description

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "lauana-oh/iso-8583",
+    "description": "A versatile ISO 8583 packer",
     "authors": [
         {
             "name": "Lauana Oliveira Hubler",
